# libmotorctrl

./: .gitignore  MANIFEST.in  README.md  drive.py  main.py  motor_cont_test1.py  pyproject.toml  setup.py  test.py  vert_slice.py
.github/workflows/: docs.yml
data/: motor_data-avg_cos.csv  motor_data-processed_cos.csv  motor_data-worst_cos.csv  motor_data-worst_sty.csv
data_prototype/: motor_data-avg_sty.csv  motor_data-processed_sty.csv
examples/: README.md  basic_motion.py  constants.py  data.json  full_proc.py  libmotorctrl  pathing_demo.py
examples/support/: constants.py  datastructures.py
integration/: full_proc.py  pathing_demo.py  test.py
libmotorctrl/: __init__.py  diagnostic_messages.json  drive.py  drive_controller.py  drive_manager.py  drive_overseer.py
src/: drive.py
